infra/k8s/jsreport-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jsreport
  labels:
    app: jsreport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jsreport
  template:
    metadata:
      labels:
        app: jsreport
    spec:
      containers:
      - name: jsreport
        image: jsreport/jsreport
        ports:
        - containerPort: 5488
        readinessProbe:
          httpGet:
            path: /
            port: 5488
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /
            port: 5488
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 5
