infra/k8s/kafka-manager-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-manager
  labels:
    srv: kafka-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: kafka-manager
  template:
    metadata:
      labels:
        srv: kafka-manager
    spec:
      containers:
      - name: kafka-manager
        image: mzagar/kafka-manager-docker:1.3.3.4
        ports:
        - containerPort: 9000
