infra/k8s/kafka-server-deployment.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: kafka-server
  labels:
    srv: kafka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: kafka-server
  template:
    metadata:
      labels:
        srv: kafka-server
    spec:
      hostname: kafka-server
      containers:
      - name: kafka-server
        image: bitnami/kafka:2.0.0
        ports:
        - containerPort: 9092
        readinessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 3
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 9092
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 5
