infra/k8s/mongo-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo
  labels:
    srv: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: mongo
  template:
    metadata:
      labels:
        srv: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
