infra/k8s/zipkin-deployment.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: zipkin
  labels:
    srv: zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      srv: zipkin
  template:
    metadata:
      labels:
        srv: zipkin
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin:latest
        ports:
        - containerPort: 9411
        readinessProbe:
          httpGet:
            path: /health
            port: 9411
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 9411
          initialDelaySeconds: 60
          timeoutSeconds: 1
          periodSeconds: 5
