infra/k8s/zookeeper-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      hostname: zookeeper
      containers:
      - name: zookeeper
        image: bitnami/zookeeper:3.4.12
        ports:
        - containerPort: 2181
