infra/k8s/elasticsearch-service.yml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
  - name: api
    protocol: TCP
    port: 9200
    targetPort: 9200
