infra/k8s/jsreport-service.yml
kind: Service
apiVersion: v1
metadata:
  name: jsreport
  labels:
    app: jsreport
spec:
  type: ClusterIP
  selector:
    app: jsreport
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5488
