infra/k8s/kafka-manager-service.yml
kind: Service
apiVersion: v1
metadata:
  name: kafka-manager
  labels:
    app: kafka-manager
spec:
  type: ClusterIP
  selector:
    app: kafka-manager
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9000
