infra/k8s/mongo-service.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - name: http
    protocol: TCP
    port: 27017
    targetPort: 27017
