infra/k8s/zookeeper-service.yml
kind: Service
apiVersion: v1
metadata:
  name: zookeeper
  labels:
    app: zookeeper
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
  - name: zk
    protocol: TCP
    port: 2181
    targetPort: 2181
