infra/k8s/kafka-manager-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: kafka.${DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: kafka-manager
          servicePort: 80
